--- a/src/web-app/index.html
+++ b/src/web-app/index.html
@@ -11,8 +11,11 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="manifest" href="manifest.json">
 
+  <link href='https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css' rel='stylesheet' />
+
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#1976d2">
+
 </head>
 
 <body>
