Active expres static public folder

--- a/src/web-api/public/index.html
+++ b/src/web-api/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Octotrails WebApp</title>
-  <base href="/">
+  <base href="https://qcontrol.be">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
@@ -38,4 +38,4 @@
   </noscript>
 
 
-<script type="text/javascript" src="runtime.6afe30102d8fe7337431.js"></script><script type="text/javascript" src="polyfills.06de3dfe2ff310f2abff.js"></script><script type="text/javascript" src="main.e5adde2ea211ff9a27c5.js"></script></body></html>
+<script type="text/javascript" src="runtime.6afe30102d8fe7337431.js"></script><script type="text/javascript" src="polyfills.06de3dfe2ff310f2abff.js"></script><script type="text/javascript" src="main.0d3fce9554440bd7cb75.js"></script></body></html>
