Fix API URL on envirronnement

--- a/src/web-api/public/index.html
+++ b/src/web-api/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Octotrails WebApp</title>
-  <base href="https://qcontrol.be">
+  <base href="https://qcontrol.be/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
@@ -38,4 +38,4 @@
   </noscript>
 
 
-<script type="text/javascript" src="runtime.7343b4dd567544cc6df9.js"></script><script type="text/javascript" src="polyfills.2523bbfa13f61490af7a.js"></script><script type="text/javascript" src="main.3b7539a7ae2e91d40324.js"></script></body></html>
+<script type="text/javascript" src="runtime.7343b4dd567544cc6df9.js"></script><script type="text/javascript" src="polyfills.2523bbfa13f61490af7a.js"></script><script type="text/javascript" src="main.753aa1ff71127f09f3c3.js"></script></body></html>
