--- a/src/web-app/index.html
+++ b/src/web-app/index.html
@@ -27,9 +27,9 @@
 
 <body>
   <app-root>
-    <div class="splash" id="content">
-      <img src="/assets/icons/logo.svg" width="256px" alt="Octotrails PWA logo">
-      <h1>Octotrails</h1>
+    <div class="spinner">
+        <div class="dot1"></div>
+        <div class="dot2"></div>
     </div>
   </app-root>
 
