--- a/src/web-api/public/index.html
+++ b/src/web-api/public/index.html
@@ -1,45 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
+<!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Octotrails WebApp</title>
   <base href="https://qcontrol.be/">
 
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Octotrails Starter API</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=0">
+  <link rel="icon" type="image/x-icon" href="./favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/icons/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
 
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-    <!-- Place favicon.ico in the root directory -->
+  <link rel="manifest" href="manifest.json">
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-  </head>
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#1976d2">
 
-  <body>
-    <app-root>
-      <div class="splash" id="content">
-        <img src="/assets/icons/logo.svg" width="256px" alt="Octotrails PWA logo">
-        <h1>Octotrails</h1>
-      </div>
-    </app-root>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link href="https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css" rel="stylesheet">
 
 
-    <noscript>
-      <p>
-        Sorry, JavaScript must be enabled to use this app !
-      </p>
-    </noscript>
+<link rel="stylesheet" href="styles.2c66f55589338b8fbe69.css"></head>
+
+<body>
+  <app-root>
+    <div class="spinner">
+        <div class="dot1"></div>
+        <div class="dot2"></div>
+    </div>
+  </app-root>
 
 
-    <script type="text/javascript" src="runtime.7343b4dd567544cc6df9.js"></script>
-    <script type="text/javascript" src="polyfills.2523bbfa13f61490af7a.js"></script>
-    <script type="text/javascript" src="main.753aa1ff71127f09f3c3.js"></script>
-  </body>
+  <noscript>
+    <p>
+      Sorry, JavaScript must be enabled to use this app !
+    </p>
+  </noscript>
 
-</html>
+
+<script type="text/javascript" src="runtime.2bbb7465b1516c52b1e5.js"></script><script type="text/javascript" src="polyfills.2523bbfa13f61490af7a.js"></script><script type="text/javascript" src="main.75b28c0fda8b99b48eca.js"></script></body></html>
