--- a/src/web-app/index.html
+++ b/src/web-app/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Octotrails WebApp</title>
+  <title>QControl</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=0" >
