--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
             <div class="col-xs-12 col-sm-11 col-md-10 col-lg-9">
               <div class="row hero-card">
                 <div class="col-xs-12 col-sm-10 col-md-7 col-lg-8">
-                  <h1 class="h1 hero-title">Osoc gh-pages template</h1>
+                  <h1 class="h1 hero-title">QControl</h1>
                   <!-- replace the title content with your project name -->
                 </div>
                 <div class="col-xs-12 col-sm-8 col-md-7 col-lg-7">
-                  <p class="hero-intro">If you want to use this template, fork it to your /gh-pages branch, break it, fix it, ship it!</p>
+                  <p class="hero-intro">QControl is a mobile web application that is going to make it easier for the controllers of STIB/MIVB to collect data about transportation stops in Brussels. </p>
                   <p class="hero-intro">Replace the title with your project name. Write <strong>in once sentence</strong> what your project does. Your tagline or Unique Selling Proposition is suitable.</p>
                 </div>
                 <div class="col-xs-12 col-sm-10 col-md-7 col-lg-8">
