--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Github pages template for Open summer of code">
+    <meta name="description" content="Github page for Qcontrol">
     <meta name="author" content="open summer of code">
     <link rel="icon" href="favicon.ico">
 
-    <title>Github pages template for Open summer of code</title>
+    <title>Qcontrol</title>
 
     <!-- flexbox -->
     <link href="css/flexboxgrid.css" rel="stylesheet">
@@ -89,13 +89,12 @@
                   <!-- replace the title content with your project name -->
                 </div>
                 <div class="col-xs-12 col-sm-8 col-md-7 col-lg-7">
-                  <p class="hero-intro">QControl is a mobile web application that is going to make it easier for the controllers of STIB/MIVB to collect data about transportation stops in Brussels. </p>
-                  <p class="hero-intro">Replace the title with your project name. Write <strong>in once sentence</strong> what your project does. Your tagline or Unique Selling Proposition is suitable.</p>
+                  <p class="hero-intro"><strong>QControl</strong> is a mobile web application that is going to make it easier for the controllers of STIB/MIVB to <strong>collect data </strong> about transportation stops in Brussels. </p>
                 </div>
                 <div class="col-xs-12 col-sm-10 col-md-7 col-lg-8">
                   <div class="button-group">
-                    <a class="button button--narrow" href="http://osoc.be" target="_blank">View project</a>
-                    <a class="button button--narrow button--alt" href="https://github.com/oSoc18/website" target="_blank">Contribute</a>
+                    <a class="button button--narrow" href="https://qcontrol.be" target="_blank">View project</a>
+                    <a class="button button--narrow button--alt" href="https://github.com/oSoc18/Octotrails" target="_blank">Contribute</a>
                   </div>
                 </div>
               </div>
@@ -113,8 +112,7 @@
           </div>
           <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-6 col-lg-5 col-md-offset-1">
             <h2 class="h4">The project</h2>
-            <p>Replace the image on the left with an image of the project you've made. Explain the project a bit better, with a <strong>short and clear</strong>. You can reuse the introduction you wrote for the <a href="https://docs.google.com/document/d/1a6zGpDaUci-ti7ft3ZbuarvNUiwp7WJeR0eoDo4K4-Y/edit?usp=sharing" target="_blank">handover document</a>.</p>
-            <p>Make sure your document has a <strong>short introduction about the project</strong>. You can reuse the introduction you wrote for the <a href="https://docs.google.com/document/d/1a6zGpDaUci-ti7ft3ZbuarvNUiwp7WJeR0eoDo4K4-Y/edit?usp=sharing" target="_blank">handover document</a>.</p>
+            <p>During Open Summer of Code 2018, a team of four students focused on ways to gather general information about transportation stops around Brussels and data concerning the accessibility of those transportation stops for people with disabilities.  This way, the STIB/MIVB employees will be able to efficiently check every stop in Brussels with the application. In the future, other data will be looked at such as route accessibility and many more.</p>
             <!-- replace these text boxes with your project description-->
           </div>
         </div>
