--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
         </div>
         <div class="row">
           <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-0 col-lg-5">
-            <p>Want to know how this grid works, what the headers look like and what kind of buttons we have? Go to the <a href="styleguide.html">styleguide</a>. Before you ship, don't forget to remove "styleguide-remove-me.css", and replace all the favicons.</p>
+            <p><strong>Search for a stop</strong>
+When you open the application it tracks the position of the user and shows it on the map. Automatically the stops that are nearby are shown with a pin and are clickable. 
+To find a particular stop in a fast and easy way, we made a search field where the user can fill in the name or the id of a stop. 
+</p>
             <div class="button-group">
               <a class="button button--narrow" href="http://osoc.be" target="_blank">View project</a>
               <a class="button button--narrow button--alt" href="https://github.com/oSoc18/website" target="_blank">Contribute</a>
