--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-0 col-lg-5">
-            <p><strong>Search for a stop</strong>
+            <p><strong>Search for a stop</strong><br>
 When you open the application it tracks the position of the user and shows it on the map. Automatically the stops that are nearby are shown with a pin and are clickable. 
 To find a particular stop in a fast and easy way, we made a search field where the user can fill in the name or the id of a stop. 
 </p>
