--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <p>Back-end Developer</p>
               </li>
               <li>
-                <h4 class="h6"><a href="http://linkedin.com" target="_blank">Bram Breys</a></h4>
+                <h4 class="h6"><a href="#" target="_blank">Bram Breys</a></h4>
                 <p>Back-end &amp; Front-end Developer</p>
               </li>
               <li>
@@ -152,7 +152,7 @@
                 <p>Designer &amp; Front-end Developer</p>
               </li>
               <li>
-                <h4 class="h6"><a href="http://linkedin.com" target="_blank">Pauline Tahon</a></h4>
+                <h4 class="h6"><a href="https://www.linkedin.com/in/paulinetahon/" target="_blank">Pauline Tahon</a></h4>
                 <p>Designer &amp; Front-end Developer</p>
               </li>
             </ul>
