--- a/src/web-api/public/index.html
+++ b/src/web-api/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
-  <title>Octotrails WebApp</title>
-  <base href="https://qcontrol.be/">
+  <title>QControl</title>
+  <base href="https://qcontrol.be">
 
   <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=0">
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
@@ -38,4 +38,4 @@
   </noscript>
 
 
-<script type="text/javascript" src="runtime.dea5aaa015a79d37005f.js"></script><script type="text/javascript" src="polyfills.2523bbfa13f61490af7a.js"></script><script type="text/javascript" src="main.d64e129dfab56b28897c.js"></script></body></html>
+<script type="text/javascript" src="runtime.fa38b38303c773e537d4.js"></script><script type="text/javascript" src="polyfills.2523bbfa13f61490af7a.js"></script><script type="text/javascript" src="main.ab98bb0033e20a6e1ebf.js"></script></body></html>
