--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <p>Back-end Developer</p>
               </li>
               <li>
-                <h4 class="h6"><a href="#" target="_blank">Bram Breys</a></h4>
+                <h4 class="h6"><a href="https://www.linkedin.com/in/brambleys/" target="_blank">Bram Bleys</a></h4>
                 <p>Back-end &amp; Front-end Developer</p>
               </li>
               <li>
