--- a/index.html
+++ b/index.html
@@ -130,10 +130,11 @@
         </div>
         
         <div class="row">
-          <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-5 col-lg-6 col-md-offset-1">
+          <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-5 col-md-offset-0 col-lg-6">
             <div class="project-image">
               <img src="img/osoc-screen.png">
             </div>
+          </div>
           </div>
           <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-0 col-lg-5">
             <h2 class="h4">Detail page of a stop</h2>
@@ -156,7 +157,7 @@
         </div>
         
         <div class="row">
-          <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-5 col-lg-6 col-md-offset-1">
+          <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-5 col-md-offset-0 col-lg-6">
             <div class="project-image">
               <img src="img/osoc-screen.png">
             </div>
