--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           </div>
           <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-5 col-lg-6 col-md-offset-1">
             <div class="project-image">
-              <img src="img/osoc-screen.png">
+              <img src="img/search.png">
             </div>
           </div>
         </div>
