--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
          <div class="row">
           <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-5 col-md-offset-0 col-lg-6">
             <div class="project-image">
-              <img src="img/osoc-screen.png">
+              <img src="img/detail.png">
             </div>
           </div>
           <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-6 col-lg-5 col-md-offset-1">
@@ -150,7 +150,7 @@
           </div>
           <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-5 col-lg-6 col-md-offset-1">
             <div class="project-image">
-              <img src="img/osoc-screen.png">
+              <img src="img/history.png">
             </div>
           </div>
         </div>
@@ -158,7 +158,7 @@
          <div class="row">
           <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-5 col-md-offset-0 col-lg-6">
             <div class="project-image">
-              <img src="img/osoc-screen.png">
+              <img src="img/questions.png">
             </div>
           </div>
           <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-6 col-lg-5 col-md-offset-1">
