Fix duplicate lines in search

--- a/src/web-app/index.html
+++ b/src/web-app/index.html
@@ -23,7 +23,7 @@
 
 
   <link rel="stylesheet" rel="noreferrer" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link href='/assets/css/mapbox-gl_v0.47.0.css' rel='stylesheet' rel="noreferrer" />
+  <link href='https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css' rel='stylesheet' rel="noreferrer" />
 
 
 </head>
